css/main.css
/* ... */
a         { color: #FF5800; text-decoration: none; }
a:visited { color: #FFA473; }
a:hover   { color: #222; }

/* Utility */

.wrap:before,
.wrap:after { content:""; display:table; }
.wrap:after { clear: both; }
.wrap {
  max-width: 800px;
  padding: 0 30px;
  margin: 0 auto;
  zoom: 1;
}

.white {
  background-color: #FFF;
}

/* Layout Styles */
/* ----------------------------------------------------------*/

/* Site header */

.site-header {
  border-top: 2px solid #FF5800;
  border-bottom: 1px solid #C0C0C0;
  min-height: 56px;
  background-color: #222;
  color: #FFF;
}

.site-title,
.site-title:hover,
.site-title:visited {
  display: table;
  position: relative;
  text-decoration: none;
  z-index: 1;
}

.site-nav {
    padding: 2px 0px;
    color: #222;
}

.site-nav .menu-icon { display: none; }

.site-nav .page-link {
  margin-left: 20px;
  color: #222;
  letter-spacing: -.5px;
  font-weight: 100;
}

.site-nav .page-link:hover {
  color: #FF5800;
}

.site-nav .page-link:first-child {
  margin-left: 0px;
}

.site-nav .page-link.twitter {
  float: right;
}


/* Site footer */

.site-footer {
  border-top: 1px solid #e8e8e8;
  padding: 30px 0;
}

.footer-heading {
  font-size: 18px;
  font-weight: 300;
  letter-spacing: -.5px;
  margin-bottom: 15px;
}

.site-footer .column { float: left; margin-bottom: 15px; }

.footer-col-1 {
  width: 270px; /*fallback*/
  width: -webkit-calc(35% - 10px);
  width: -moz-calc(35% - 10px);
  width: -o-calc(35% - 10px);
  width: calc(35% - 10px);
  margin-right: 10px
}
.footer-col-2 {
  width: 175px; /*fallback*/
  width: -webkit-calc(23.125% - 10px);
  width: -moz-calc(23.125% - 10px);
  width: -o-calc(23.125% - 10px);
  width: calc(23.125% - 10px);
  margin-right: 10px
}
.footer-col-3 {
  width: 335px; /*fallback*/
  width: -webkit-calc(41.875%);
  width: -moz-calc(41.875%);
  width: -o-calc(41.875%);
  width: calc(41.875%);
}

.site-footer ul { list-style: none; }

.site-footer li,
.site-footer p {
  font-size: 15px;
  letter-spacing: -.3px;
  color: #828282;
}

.icon-svg {
  display: inline-block;
  width: 16px;
  height: 16px;
  position: relative;
  top: 3px;
}


/* Page Content styles */
/* ----------------------------------------------------------*/

.page-content {
  padding: 30px 0;
  background-color: #fff;
}


/* Post styles */
/* ----------------------------------------------------------*/

.home .post {
  margin-bottom: 45px;
}

.post-header {
  margin: 10px 0 30px;
}

.post-footer {
  border-top: 1px solid #C2C2C2;
  padding: 5px 0px;
}

.home .post-footer {
  border-top: none;
  border-bottom: 1px solid #C2C2C2;
}

.post-header h1 {
  font-size: 42px;
  letter-spacing: -1.75px;
  line-height: 1;
  font-weight: 100;
}

.post-header h1 a,
.post-footer .cta a,
.post-header h1 a:visited,
.post-header .cta a:visited {
  color: #222;
}

.post-header h1 a:hover,
.post-footer .cta a:hover {
  color: #FF5800;
  text-decoration: none;
}

.post-subheader,
.post-footer {
  display: table;
  width: 100%;
}

.post-subheader .meta,
.post-footer .cta {
  font-size: 20px;
  font-weight: 100;
  line-height: 20px;
  color: #818181;
  margin-top: 5px;
  display: table-cell;
  width: 50%;
}

.home .post-footer .cta {
  font-size: 15px;
  line-height: 15px;
}

.post-footer .cta a,
.post-footer{
  color: #222;
}

.post-subheader .social,
.post-footer .social {
  display: table-cell;
  width: 50%;
  text-align: right;
}

.post-footer .social { text-align: left; }
.post-footer .cta { text-align: right; }

.post-subheader .icon,
.post-footer .icon {
  margin: 0px 2px;
}

.post-subheader .icon-svg,
.post-footer .icon-svg {
  width: 24px;
  height: 24px;
}

.home .post-footer .icon-svg {
  width: 18px;
  height: 18px;
}

.post-content { margin: 0 0 30px; }

.post-content > * { margin: 20px 0; }


.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
  line-height: 1;
  font-weight: 300;
  margin: 40px 0 20px;
}

.post-content h2 {
  font-size: 32px;
  letter-spacing: -1.25px;
}

.post-content h3 {
  font-size: 26px;
  letter-spacing: -1px;
}

.post-content h4 {
  font-size: 20px;
  letter-spacing: -1px;
}

.post-content blockquote {
  border-left: 4px solid #e8e8e8;
  padding-left: 20px;
  font-size: 18px;
  opacity: .6;
  letter-spacing: -1px;
  font-style: italic;
  margin: 30px 0;
}

.post-content ul,
.post-content ol { padding-left: 20px; }

.post pre,
.post code {
  border: 1px solid #d5d5e9;
  background-color: #eef;
  padding: 8px 12px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  font-size: 15px;
}

.post code { padding: 1px 5px; }

.post ul,
.post ol { margin-left: 1.35em; }

.post pre code { border: none; }

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #222;
  color: #FFF;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

.post pre.terminal code { background-color: #222; }

/* Syntax highlighting styles */
/* ----------------------------------------------------------*/

.highlight  { background: #ffffff; }
.highlight .c { color: #999988; font-style: italic } /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
.highlight .k { font-weight: bold } /* Keyword */
.highlight .o { font-weight: bold } /* Operator */
.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #999999 } /* Generic.Heading */
/* ... */

